user preperrence and articles
