# routes/api.php
@@ -3,6 +3,9 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\Auth\PasswordResetController;
+use App\Http\Controllers\ArticleController;
+use App\Http\Controllers\UserPreferenceController;
 
 /*
 |--------------------------------------------------------------------------
@@ -21,3 +24,18 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
+Route::post('password/email', [PasswordResetController::class, 'sendResetLink']);
+Route::post('password/reset', [PasswordResetController::class, 'reset']);
+
+Route::prefix('articles')->group(function () {
+    Route::get('/', [ArticleController::class, 'index']);
+    Route::get('/{id}', [ArticleController::class, 'show']);
+});
+
+Route::middleware('auth:sanctum')->group(function () {
+    Route::prefix('preferences')->group(function () {
+        Route::post('/', [UserPreferenceController::class, 'store']);
+        Route::get('/', [UserPreferenceController::class, 'show']);
+        Route::get('/personalized-feed', [UserPreferenceController::class, 'personalizedFeed']);
+    });
+});
